# mobile-mgr-nng

./: CMakeLists.txt  README.md
cmake/: Findglib-2.0.cmake  Findmbim-glib.cmake  Findnng.cmake  Findqmi-glib.cmake
sample/: client.c
src/: databuf.c  databuf.h  main.c  mbim.c  mbim.h  mbim_enum.h  nng_server.c  nng_server.h  qmi.c
